[tool.poetry]
name = "airflow-helper"
version = "0.1.0"
description = ""
authors = ["Iuliia Volkova <xnuinside@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyyaml = "^6.0.1"
pydantic = "^2.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
